# polars-sgt

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
polars_sgt/: __init__.py  functions.py  namespace.py  ranges.py  typing.py  utils.py
src/: expressions.rs  lib.rs  sgt_transform.rs
tests/: ceil_test.py  julian_date_test.py  test_benchmark.py  test_date_range.py  test_format_localized.py  test_is_busday.py  test_month_delta.py  test_sgt_transform.py  test_timezone.py  verify_sgt.py
