[package]
name = "polars_sgt"
version = "0.1.0"
edition = "2021"
authors = ["Zedd <lytran14789@gmail.com>", "Marco Gorelli <33491632+MarcoGorelli@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_sgt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.25.0", features = ["derive", "dtype-struct", "dtype-array"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "unstable-locales"] } 
chrono-tz = "0.10.4"
polars = { version = "0.52.0", features = ["strings", "timezones"]}
polars-ops = { version = "0.52.0", default-features = false }
polars-arrow = { version = "0.52.0", default-features = false }
rayon = "1.10"

