[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.5.0"]
build-backend = "maturin"

[project]
name = "polars-sgt"
description = "Sequence Graph Transform (SGT) for Polars - Transform sequential data into weighted n-gram representations"
readme = "README.md"
authors = [
  { name="Zedd", email="lytran14789@gmail.com" },
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "maturin>=1.11.5",
    "polars>=1.36.1",
    "pytest>=8.4.2",
]

[project.urls]
"Repository" = "https://github.com/4ursmile/polars-sgt"
"Documentation" = "https://github.com/4ursmile/polars-sgt"
"Change Log" = "https://github.com/4ursmile/polars-sgt/releases"
"Issue Tracker" = "https://github.com/4ursmile/polars-sgt/issues"


[tool.maturin]
module-name = "polars_sgt._internal"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  'A003',
  'ANN401',
  'ARG002',  # todo: enable
  'ARG003',  # todo: enable
  'C901',
  'COM812',
  'D100',
  'D103',
  'D104',
  'D105',
  'D107',
  'D203',
  'D212',
  'DTZ',
  'E501',
  'FBT003',  # todo: enable
  'FIX',
  'ISC001',
  'PD',
  'PLR0911',
  'PLR0912',
  'PLR5501',
  'PLR2004',
  'PT011',
  'PTH',
  'RET505',
  'S',
  'SLF001',
  'TD',
  'TRY004'
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    "tests",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".ipynb",
    "venv",
]
line-length = 80

[[tool.mypy.overrides]]
module = [
  "pandas",
  "dateutil.*",
]
ignore_missing_imports = true
